@@ -2,6 +2,9 @@ package com.projects.Pulsora.Security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -9,72 +12,72 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.config.Customizer;
-import org.springframework.web.cors.CorsConfiguration; // Import this
-import org.springframework.web.cors.CorsConfigurationSource; // Import this
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource; // Import this
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays; // Import this
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfiguration {
 
+    // 1. PasswordEncoder Bean: Must be used to hash passwords before storing them in the DB.
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
+    // 2. AuthenticationManager Bean: This explicitly exposes the bean, fixing your autowiring error.
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
+    }
+
+    // 3. SecurityFilterChain: Defines which endpoints are public and how sessions are managed.
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // --- ADD CORS CONFIGURATION ---
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // -----------------------------
-
-                // Explicitly disable CSRF
+                // ------------------ ADDED CORS CONFIGURATION ------------------
+                // Enable CORS using the corsConfigurationSource bean defined below
+                .cors(Customizer.withDefaults())
+                // --------------------------------------------------------------
+                // Disable CSRF for stateless REST APIs
                 .csrf(AbstractHttpConfigurer::disable)
-
-                // Disable HTTP Basic authentication prompt but allow anonymous
-                .httpBasic(Customizer.withDefaults()).anonymous(Customizer.withDefaults())
-
-                .authorizeHttpRequests(authz -> authz
-                        // Explicitly permit all requests without any conditions (for now)
-                        .requestMatchers("/**").permitAll()
-                        .anyRequest().permitAll()
+                // Configure authorization rules
+                .authorizeHttpRequests(auth -> auth
+                        // Allow access to sign-up and login endpoints without authentication
+                        .requestMatchers("/users", "/login").permitAll()
+                        // Require authentication for all other requests
+                        .anyRequest().authenticated()
                 )
-
-                // Keep stateless session management
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                );
+                // Set session management to stateless (standard for APIs using tokens)
+                .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
         return http.build();
     }
 
-    // --- ADD THIS BEAN TO CONFIGURE CORS ---
+    // 4. CORS Configuration Source Bean
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Allow requests from typical frontend dev server origins
+        // Allowed origins for frontend clients
         configuration.setAllowedOrigins(Arrays.asList(
                 "http://localhost:5173",
                 "http://localhost:5174",
-                "http://localhost:5175", // Your frontend is running here now
+                "http://localhost:5175", // Current common dev port
                 "http://127.0.0.1:5173",
                 "http://127.0.0.1:5174",
                 "http://127.0.0.1:5175",
-                "https://d2lv48-5175.csb.app",
-                "https://marquerite-unprotecting-amber.ngrok-free.dev"
-                // Add other origins if needed (e.g., CodeSandbox URL)
+                "https://d2lv48-5175.csb.app", // Example CodeSandbox domain
+                "https://marquerite-unprotecting-amber.ngrok-free.dev" // Example ngrok domain
         ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allow needed methods
-        configuration.setAllowedHeaders(List.of("*")); // Allow all headers for simplicity in dev
-        // configuration.setAllowCredentials(true); // Uncomment if you need cookies/credentials later
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Allowed HTTP methods
+        configuration.setAllowedHeaders(List.of("*")); // Allow all headers (e.g., Authorization header for JWTs)
+        // configuration.setAllowCredentials(true); // Uncomment if you need cookies/credentials
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Apply config to all API paths
+        source.registerCorsConfiguration("/**", configuration); // Apply this configuration to all API paths
         return source;
     }
-    // ----------------------------------------
 }
